# MeshConvolution

./: LICENSE.md  README.md
code/: ._README.txt
code/GraphAE/: ._graphAE.py  graphAE.py  graphAE_dataloader.py  graphAE_datamaker_DFAUST.py  graphAE_param.py  graphAE_test.py  graphAE_train.py
code/GraphAE27_new_compare/: ResidueBlock.py  graphAE.py  graphAE_dataloader.py  graphAE_datamaker.py  graphAE_datamaker_DFAUST.py  graphAE_datamaker_DFAUST_harder.py  graphAE_datamaker_test_mem.py  graphAE_datavisualizer.py  graphAE_param.py  graphAE_pc_weights.py  graphAE_test.py  graphAE_test_ply.py  graphAE_test_render.py  graphAE_train.py  load_and_save_ply.py  spline.py
code/GraphAE27_new_compare/renderer/: __init__.py  img2video.py  renderer.py
code/GraphSampling/: ._main.cpp  CMakeCache.txt  CMakeLists.txt  GraphSampling  Makefile  cmake_install.cmake  main.cpp  mdVector.h  meshCNN.h  meshPooler.h  meshPooler_visualizer_new.h
data/: asiandragon.md  sakuratrunk.md
data/DFAUST/: template.ply
train/: 10_conv_res.config  20_conv.config  30_conv_pool.config
train/0223_GraphAE27_compare/: 00_conv_pool_Cheb.config  10_conv_pool_GAT.config  20_conv_pool_GMM.config  30_conv_pool_vw.config  40_conv_pool_FeaST.config
train/0223_GraphAE27_compare/connections/: downsampling_matrices.pkl
train/0422_graphAE_dfaust/: ._30_conv_pool.config  ._explanations.config  10_conv_res.config  20_conv.config  30_conv_pool.config
train/graphAE_Breast/: explanations.config
train/graphAE_Breast/ConnectionMatrices/: _pool0.npy  _pool1.npy  _pool2.npy  _pool3.npy  _pool4.npy  (+11 more)
(+35 files in other folders)
